--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,10 +1,9 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-08 13:20:44
-# Total rules: 4587
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-09 09:45:03
+# Total rules: 4533
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
 .1080872514.rsc.cdn77.org
-.1097834592.rsc.cdn77.org
 .1187531871.rsc.cdn77.org
 .1208344341.rsc.cdn77.org
 .123.sogou.com
@@ -26,7 +25,6 @@
 .1wincdn.b-cdn.net
 .2016.sina.cn
 .2052.flash2-http.qq.com
-.2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
 .2mdn.net
 .2xbits.eu.org
 .3rd.t.sohu.com
@@ -81,7 +79,7 @@
 .ad.cyapi.cn
 .ad.dev.360.cn
 .ad.docer.wps.cn
-.ad.eporner.com
+.ad.gmw.cn
 .ad.hpplay.cn
 .ad.imp.joins.com
 .ad.india.xiaomi.com
@@ -113,7 +111,6 @@
 .ad4.sina.com.cn
 .ad5.sina.com.cn
 .ada.baidu.com
-.adagiobanner.s3.amazonaws.com
 .adapi.foooooot.com
 .adash-c.m.taobao.com
 .adash-c.ut.taobao.com
@@ -309,7 +306,6 @@
 .aegis.qq.com
 .afd.baidu.com
 .afd.l.google.com
-.affiliate.googleusercontent.com
 .affim.baidu.com
 .afp.alicdn.com
 .afp.iqiyi.com
@@ -419,7 +415,6 @@
 .api.miui.security.xiaomi.com
 .api.mp.uc.cn
 .api.newsfeed.intl.miui.com
-.api.optnmnstr.com
 .api.setting.intl.miui.com
 .api.shuaji.360.cn
 .api.sprig.com
@@ -509,6 +504,7 @@
 .bat.bing.com
 .bazinga.mse.sogou.com
 .bbangads.b-cdn.net
+.bc.qunar.com
 .bd.hd.sohu.com
 .bdplus.baidu.com
 .bds.snssdk.com
@@ -605,51 +601,17 @@
 .c-adash.m.taobao.com
 .c-nfa.jd.com
 .c.alimama.com
-.c.ar.msn.com
 .c.arstechnica.com
-.c.at.msn.com
 .c.baidu.com
-.c.be.msn.com
-.c.br.msn.com
-.c.ca.msn.com
-.c.cl.msn.com
-.c.de.msn.com
-.c.dk.msn.com
-.c.es.msn.com
-.c.fi.msn.com
-.c.fr.msn.com
 .c.gj.qq.com
-.c.gr.msn.com
-.c.hk.msn.com
-.c.id.msn.com
-.c.ie.msn.com
-.c.il.msn.com
-.c.in.msn.com
-.c.it.msn.com
-.c.jp.msn.com
-.c.latam.msn.com
 .c.live.com
 .c.mse.360.cn
 .c.msn.com
-.c.my.msn.com
 .c.newyorker.com
-.c.nl.msn.com
-.c.no.msn.com
-.c.ph.msn.com
-.c.prodigy.msn.com
-.c.pt.msn.com
-.c.ru.msn.com
 .c.sayhi.360.cn
-.c.se.msn.com
-.c.sg.msn.com
-.c.th.msn.com
-.c.tr.msn.com
-.c.tw.msn.com
 .c.uaa.iqiyi.com
-.c.uk.msn.com
 .c.wired.com
 .c.yes.youku.com
-.c.za.msn.com
 .c0nt4ct-me.pages.dev
 .c1-stats.shopifysvc.com
 .cache.datamart.windows.com
@@ -686,6 +648,7 @@
 .cgi.connect.qq.com
 .cgicol.amap.com
 .champagne.futurecdn.net
+.channel-analysis-js.gmw.cn
 .channelusa.samsung.com
 .chaoku.oss-cn-chengdu.aliyuncs.com
 .chat1.jd.com
@@ -739,7 +702,6 @@
 .cms.tanx.com
 .cms.ucweb.com
 .cmshow.gtimg.cn
-.cmweb.ilike.alibaba.com
 .cn-vmc-images.alicdn.com
 .cnzz.com
 .cnzz.mmstat.com
@@ -2198,7 +2160,6 @@
 .deisd5o6v8rgq.cloudfront.net
 .dek5iqd53g59a.cloudfront.net
 .demkc32bq01ah.cloudfront.net
-.derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .detwzgl8cvciv.cloudfront.net
 .dev-push.m.youku.com
@@ -2262,6 +2223,7 @@
 .diz4z73aymwyp.cloudfront.net
 .diziwatchpreroll.pages.dev
 .dj4odketdva9s.cloudfront.net
+.djgnqo9p1icyr.cloudfront.net
 .djm080u34wfc5.cloudfront.net
 .djnaivalj34ub.cloudfront.net
 .djr4k68f8n55o.cloudfront.net
@@ -2403,7 +2365,6 @@
 .dqd5t8xfxmhi7.cloudfront.net
 .dqif5bl25s0bf.cloudfront.net
 .dqv45r33u0ltv.cloudfront.net
-.dr.soso.com
 .dr3k6qonw2kee.cloudfront.net
 .dr6su5ow3i7eo.cloudfront.net
 .dr6vcclmzwk74.cloudfront.net
@@ -2547,7 +2508,6 @@
 .ecommstats.s3.amazonaws.com
 .ecpm.tanx.com
 .edge.adobedc.net
-.edgecast-vod.yimg.com
 .edigitalsurvey.com
 .eduad.baidu.com
 .ef-dongfeng.tanx.com
@@ -2871,6 +2831,7 @@
 .hoplink.ksosoft.com
 .hotchat-im.iqiyi.com
 .hotupgrade.hpplay.cn
+.houyi.kkmh.com
 .hpd.baidu.com
 .hs-scripts.com
 .ht.www.sogou.com
@@ -2970,7 +2931,6 @@
 .imdns.hpplay.cn
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
-.img.alibaba.com
 .img.gou.wpscdn.cn
 .img.response.digicert.com
 .img1.126.net
@@ -2985,7 +2945,6 @@
 .improving.duckduckgo.com
 .imtt.qq.com
 .in.applicationinsights.azure.com
-.in.yimg.com
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
 .infinityid.condenastdigital.com
@@ -3015,6 +2974,7 @@
 .ip.geo.iqiyi.com
 .ip.taobao.com
 .ip.ws.126.net
+.ipv4.kkmh.com
 .ipv4dns.com
 .ir.mail.163.com
 .irpmt.mail.163.com
@@ -3051,7 +3011,6 @@
 .jsqmt.qq.com
 .juggler.services.disqus.com
 .jun01.oss-cn-beijing.aliyuncs.com
-.jzclick.soso.com
 .jzt.jd.com
 .kcqoej.roborock.com
 .kde.qq.com
@@ -3091,6 +3050,7 @@
 .log-vietnamplus-vn.cdn.ampproject.org
 .log.aliyuncs.com
 .log.amemv.com
+.log.flight.qunar.com
 .log.geetest.com
 .log.jd.com
 .log.m.sm.cn
@@ -3162,6 +3122,7 @@
 .m.simba.taobao.com
 .m1.baidu.com
 .m1tm.motor1.com
+.m6ulblxep4.execute-api.us-east-1.amazonaws.com
 .ma-adx.ctrip.com
 .ma.baidu.com
 .mads-eu.amazon.com
@@ -3177,6 +3138,7 @@
 .marketing.agora.io
 .marketing.alibaba.com
 .marketing.dropbox.com
+.marketing.mangacopy.com
 .martech.condenastdigital.com
 .masdk.3g.qq.com
 .masdkv6.3g.qq.com
@@ -3262,7 +3224,6 @@
 .mobileads.google.com
 .mobileads.msn.com
 .mobileanalytics.us-east-1.amazonaws.com
-.mobileleads.msn.com
 .mobilem.360.cn
 .mobilemsg.youku.com
 .mobopay.baidu.com
@@ -3342,17 +3303,14 @@
 .ns.weibo.cn
 .nsclick.baidu.com
 .nsclickvideo.baidu.com
-.nytadvertising.nytimes.com
 .o2o.api.xiaomi.com
 .o9tt6h08li.execute-api.eu-west-1.amazonaws.com
 .oca.microsoft.com
 .oceanengine.com
 .odc.weather.com
-.offer.alibaba.com
 .offnavi.map.baidu.com
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
-.oimsgad.qq.com
 .omappapi.com
 .omgid.qq.com
 .omgmta1.qq.com
@@ -3462,8 +3420,6 @@
 .pindao.huoban.taobao.com
 .ping.acc.sogou.com
 .pingback.sogou.com
-.pingfore.qq.com
-.pingfore.soso.com
 .pinghot.qq.com
 .pingjs.qq.com
 .pingma.qq.com
@@ -3478,6 +3434,7 @@
 .pixel.condenastdigital.com
 .pixel.facebook.com
 .pixel.ipinfo.io
+.pixel.propublica.org
 .pixel.reddit.com
 .pixel.spotify.com
 .pixel.wp.com
@@ -3563,9 +3520,8 @@
 .qpb0.sohu.com
 .qpb1.sohu.com
 .qqdata.ab.qq.com
-.qqlogo.qq.com
 .qqshow2-item.qq.com
-.qring-tms.qq.com
+.qreport.qunar.com
 .qrl.existence.pp.ua
 .qss-client.qq.com
 .qurl.f.360.cn
@@ -3588,12 +3544,9 @@
 .rad.microsoft.com
 .rad.msn.com
 .rads.msn.com
-.rads.stackoverflow.com
-.rapid-glade-cde8.asoumare042024.workers.dev
 .rating6.kingsoft-office-service.com
 .raw.vidyard.com
 .rcgi.video.qq.com
-.rcm-images.amazon.com
 .rd.e.sogou.com
 .rdstat.tanx.com
 .re.m.taobao.com
@@ -3629,7 +3582,6 @@
 .rh.qq.com
 .rich.qq.com
 .richmedia.video.qq.com
-.richmedia.yimg.com
 .riqhisfus.com
 .risk.clearbit.com
 .river.zhidao.baidu.com
@@ -3661,7 +3613,6 @@
 .s.baidu.com
 .s.deepl.com
 .s.img.mix.sina.com.cn
-.s.skimresources.com
 .s.so.360.cn
 .sa.api.intl.miui.com
 .sa.bbc.co.uk
@@ -3744,7 +3695,6 @@
 .shooter.m.jd.com
 .shouji.360.cn
 .shouji.sogou.com
-.show-msgch.qq.com
 .show.look.360.cn
 .showwxml.qq.com
 .shukriya90.com
@@ -3856,7 +3806,9 @@
 .stats.addtoany.com
 .stats.bbc.co.uk
 .stats.miui.com
+.stats.nymag.com
 .stats.paypal.com
+.stats.propublica.org
 .stats.shopify.com
 .stats.unity3d.com
 .stats.wired.com
@@ -3885,7 +3837,6 @@
 .sugs.m.sm.cn
 .sunlightmetrics.b-cdn.net
 .supportmetrics.apple.com
-.survey.china.alibaba.com
 .suvset.sohu.com
 .svibeacon.onezapp.com
 .sw.mobile.sogou.com
@@ -3955,7 +3906,6 @@
 .timon.zijieapi.com
 .tinglog.baidu.com
 .tiqcdn.com
-.titkoshirek.wordpress.com
 .tj.b.qq.com
 .tj.video.qq.com
 .tj.youzanyun.com
@@ -3985,7 +3935,6 @@
 .tongji.baidu.com
 .toolbar.baidu.com
 .toolbar.msn.com
-.toolbar.soso.com
 .tools.3g.qq.com
 .top.h.qhimg.com
 .toruk.tanx.com
@@ -4065,7 +4014,6 @@
 .udc.msn.com
 .udd1i5.zhihu.com
 .udpolimenew.baidu.com
-.uedata.amazon.com
 .ufosdk.baidu.com
 .ug.snssdk.com
 .uid.ksosoft.com
@@ -4082,7 +4030,6 @@
 .umini.shujupie.com
 .umsns.com
 .un-acs.youku.com
-.undersite.pages.dev
 .unibotscdn.b-cdn.net
 .unidesk.alicdn.com
 .union.360.cn
@@ -4096,7 +4043,6 @@
 .unionimage.baidu.com
 .unitacs.m.taobao.com
 .unityads.unity3d.com
-.unstat.baidu.com
 .up-hl.3g.qq.com
 .up1.tj.u2.ucweb.com
 .up4.ucweb.com
@@ -4112,6 +4058,7 @@
 .usage-ping.brave.com
 .usage.influxdata.com
 .user1.game.qq.com
+.userimg.qunar.com
 .userreporting.cloud.unity3d.com
 .usp1.baidu.com
 .utility.baidu.com
@@ -4148,7 +4095,6 @@
 .virus-engine.sec.miui.com
 .visualscience.external.bbc.co.uk
 .vlive.qqvideo.tc.qq.com
-.voduscdn.azureedge.net
 .volcsiriusbd.com
 .vpic.video.qq.com
 .vs19.gzcu.u3.ucweb.com
@@ -4215,8 +4161,6 @@
 .wwads.cn
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
-.www.addtoany.com
-.www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
 .www7.springer.com
 .wxaintpcos.wxqcloud.qq.com.cn
@@ -4379,6 +4323,7 @@ dns.m.sm.cn
 dns.wechat.com
 download.wan.sohu.com
 du.163.com
+edgecast-vod.yimg.com
 encounter.bz.mgtv.com
 err.taobao.com
 events-analytics.apple.com
@@ -4512,6 +4457,7 @@ proxy-mob-cld.alicdn.com
 prt-stsdk.vivo.com.cn
 qgnu18wo.sina.cn
 qiye.xiaomi.com
+qring-tms.qq.com
 quickaplus-server-api-cn-zhangjiakou.aliyuncs.com
 r.dmp.sina.cn
 r.dmp.sina.com.cn
