--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,9 +1,10 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-09 09:45:03
-# Total rules: 4533
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-09 21:57:59
+# Total rules: 4610
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
 .1080872514.rsc.cdn77.org
+.1097834592.rsc.cdn77.org
 .1187531871.rsc.cdn77.org
 .1208344341.rsc.cdn77.org
 .123.sogou.com
@@ -25,6 +26,7 @@
 .1wincdn.b-cdn.net
 .2016.sina.cn
 .2052.flash2-http.qq.com
+.2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
 .2mdn.net
 .2xbits.eu.org
 .3rd.t.sohu.com
@@ -79,6 +81,7 @@
 .ad.cyapi.cn
 .ad.dev.360.cn
 .ad.docer.wps.cn
+.ad.eporner.com
 .ad.gmw.cn
 .ad.hpplay.cn
 .ad.imp.joins.com
@@ -111,6 +114,7 @@
 .ad4.sina.com.cn
 .ad5.sina.com.cn
 .ada.baidu.com
+.adagiobanner.s3.amazonaws.com
 .adapi.foooooot.com
 .adash-c.m.taobao.com
 .adash-c.ut.taobao.com
@@ -306,6 +310,7 @@
 .aegis.qq.com
 .afd.baidu.com
 .afd.l.google.com
+.affiliate.googleusercontent.com
 .affim.baidu.com
 .afp.alicdn.com
 .afp.iqiyi.com
@@ -365,6 +370,7 @@
 .analytics.google.com
 .analytics.googleapis.com
 .analytics.hz.netease.com
+.analytics.kaltura.com
 .analytics.live.com
 .analytics.map.qq.com
 .analytics.meituan.net
@@ -415,6 +421,7 @@
 .api.miui.security.xiaomi.com
 .api.mp.uc.cn
 .api.newsfeed.intl.miui.com
+.api.optnmnstr.com
 .api.setting.intl.miui.com
 .api.shuaji.360.cn
 .api.sprig.com
@@ -601,17 +608,51 @@
 .c-adash.m.taobao.com
 .c-nfa.jd.com
 .c.alimama.com
+.c.ar.msn.com
 .c.arstechnica.com
+.c.at.msn.com
 .c.baidu.com
+.c.be.msn.com
+.c.br.msn.com
+.c.ca.msn.com
+.c.cl.msn.com
+.c.de.msn.com
+.c.dk.msn.com
+.c.es.msn.com
+.c.fi.msn.com
+.c.fr.msn.com
 .c.gj.qq.com
+.c.gr.msn.com
+.c.hk.msn.com
+.c.id.msn.com
+.c.ie.msn.com
+.c.il.msn.com
+.c.in.msn.com
+.c.it.msn.com
+.c.jp.msn.com
+.c.latam.msn.com
 .c.live.com
 .c.mse.360.cn
 .c.msn.com
+.c.my.msn.com
 .c.newyorker.com
+.c.nl.msn.com
+.c.no.msn.com
+.c.ph.msn.com
+.c.prodigy.msn.com
+.c.pt.msn.com
+.c.ru.msn.com
 .c.sayhi.360.cn
+.c.se.msn.com
+.c.sg.msn.com
+.c.th.msn.com
+.c.tr.msn.com
+.c.tw.msn.com
 .c.uaa.iqiyi.com
+.c.uk.msn.com
 .c.wired.com
 .c.yes.youku.com
+.c.za.msn.com
 .c0nt4ct-me.pages.dev
 .c1-stats.shopifysvc.com
 .cache.datamart.windows.com
@@ -702,6 +743,7 @@
 .cms.tanx.com
 .cms.ucweb.com
 .cmshow.gtimg.cn
+.cmweb.ilike.alibaba.com
 .cn-vmc-images.alicdn.com
 .cnzz.com
 .cnzz.mmstat.com
@@ -2160,6 +2202,7 @@
 .deisd5o6v8rgq.cloudfront.net
 .dek5iqd53g59a.cloudfront.net
 .demkc32bq01ah.cloudfront.net
+.derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .detwzgl8cvciv.cloudfront.net
 .dev-push.m.youku.com
@@ -2365,6 +2408,7 @@
 .dqd5t8xfxmhi7.cloudfront.net
 .dqif5bl25s0bf.cloudfront.net
 .dqv45r33u0ltv.cloudfront.net
+.dr.soso.com
 .dr3k6qonw2kee.cloudfront.net
 .dr6su5ow3i7eo.cloudfront.net
 .dr6vcclmzwk74.cloudfront.net
@@ -2508,6 +2552,7 @@
 .ecommstats.s3.amazonaws.com
 .ecpm.tanx.com
 .edge.adobedc.net
+.edgecast-vod.yimg.com
 .edigitalsurvey.com
 .eduad.baidu.com
 .ef-dongfeng.tanx.com
@@ -2931,6 +2976,7 @@
 .imdns.hpplay.cn
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
+.img.alibaba.com
 .img.gou.wpscdn.cn
 .img.response.digicert.com
 .img1.126.net
@@ -2945,6 +2991,7 @@
 .improving.duckduckgo.com
 .imtt.qq.com
 .in.applicationinsights.azure.com
+.in.yimg.com
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
 .infinityid.condenastdigital.com
@@ -3011,7 +3058,9 @@
 .jsqmt.qq.com
 .juggler.services.disqus.com
 .jun01.oss-cn-beijing.aliyuncs.com
+.jzclick.soso.com
 .jzt.jd.com
+.kalstats.kaltura.com
 .kcqoej.roborock.com
 .kde.qq.com
 .kepler.jd.com
@@ -3035,9 +3084,11 @@
 .libfre.obs.cn-east-3.myhuaweicloud.com
 .link.medium.com
 .linkeye.ximalaya.com
+.links.e.response.mayoclinic.org
 .links.services.disqus.com
 .live.126.net
 .lives.l.ott.video.qq.com
+.livestats.kaltura.com
 .lm.tv.sohu.com
 .lmbsy.qq.com
 .lmsjy.qq.com
@@ -3177,6 +3228,7 @@
 .metrics.mzstatic.com
 .metrics.npr.org
 .metrics.proquest.com
+.metrics.theatlantic.com
 .metrics.zacks.com
 .mg.games.sina.com.cn
 .mgtv-bbqn.oss-cn-beijing.aliyuncs.com
@@ -3224,6 +3276,7 @@
 .mobileads.google.com
 .mobileads.msn.com
 .mobileanalytics.us-east-1.amazonaws.com
+.mobileleads.msn.com
 .mobilem.360.cn
 .mobilemsg.youku.com
 .mobopay.baidu.com
@@ -3303,14 +3356,17 @@
 .ns.weibo.cn
 .nsclick.baidu.com
 .nsclickvideo.baidu.com
+.nytadvertising.nytimes.com
 .o2o.api.xiaomi.com
 .o9tt6h08li.execute-api.eu-west-1.amazonaws.com
 .oca.microsoft.com
 .oceanengine.com
 .odc.weather.com
+.offer.alibaba.com
 .offnavi.map.baidu.com
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
+.oimsgad.qq.com
 .omappapi.com
 .omgid.qq.com
 .omgmta1.qq.com
@@ -3420,6 +3476,8 @@
 .pindao.huoban.taobao.com
 .ping.acc.sogou.com
 .pingback.sogou.com
+.pingfore.qq.com
+.pingfore.soso.com
 .pinghot.qq.com
 .pingjs.qq.com
 .pingma.qq.com
@@ -3520,8 +3578,10 @@
 .qpb0.sohu.com
 .qpb1.sohu.com
 .qqdata.ab.qq.com
+.qqlogo.qq.com
 .qqshow2-item.qq.com
 .qreport.qunar.com
+.qring-tms.qq.com
 .qrl.existence.pp.ua
 .qss-client.qq.com
 .qurl.f.360.cn
@@ -3544,9 +3604,12 @@
 .rad.microsoft.com
 .rad.msn.com
 .rads.msn.com
+.rads.stackoverflow.com
+.rapid-glade-cde8.asoumare042024.workers.dev
 .rating6.kingsoft-office-service.com
 .raw.vidyard.com
 .rcgi.video.qq.com
+.rcm-images.amazon.com
 .rd.e.sogou.com
 .rdstat.tanx.com
 .re.m.taobao.com
@@ -3582,6 +3645,7 @@
 .rh.qq.com
 .rich.qq.com
 .richmedia.video.qq.com
+.richmedia.yimg.com
 .riqhisfus.com
 .risk.clearbit.com
 .river.zhidao.baidu.com
@@ -3613,6 +3677,7 @@
 .s.baidu.com
 .s.deepl.com
 .s.img.mix.sina.com.cn
+.s.skimresources.com
 .s.so.360.cn
 .sa.api.intl.miui.com
 .sa.bbc.co.uk
@@ -3669,6 +3734,7 @@
 .searchads.apple.com
 .sec-cdn.static.xiaomi.net
 .sec.resource.xiaomi.net
+.secure.diet.mayoclinic.org
 .securemetrics-z.v.aaplimg.com
 .securemvt.apple.com
 .security-lq.snssdk.com
@@ -3695,6 +3761,7 @@
 .shooter.m.jd.com
 .shouji.360.cn
 .shouji.sogou.com
+.show-msgch.qq.com
 .show.look.360.cn
 .showwxml.qq.com
 .shukriya90.com
@@ -3805,6 +3872,7 @@
 .statistic.qzone.qq.com
 .stats.addtoany.com
 .stats.bbc.co.uk
+.stats.kaltura.com
 .stats.miui.com
 .stats.nymag.com
 .stats.paypal.com
@@ -3837,6 +3905,7 @@
 .sugs.m.sm.cn
 .sunlightmetrics.b-cdn.net
 .supportmetrics.apple.com
+.survey.china.alibaba.com
 .suvset.sohu.com
 .svibeacon.onezapp.com
 .sw.mobile.sogou.com
@@ -3864,6 +3933,7 @@
 .t11.baidu.com
 .t12.baidu.com
 .ta.qq.com
+.tagdelivery.mayoclinic.org
 .tags.voacantonese.com
 .tajs.qq.com
 .tapioni.com
@@ -3906,6 +3976,7 @@
 .timon.zijieapi.com
 .tinglog.baidu.com
 .tiqcdn.com
+.titkoshirek.wordpress.com
 .tj.b.qq.com
 .tj.video.qq.com
 .tj.youzanyun.com
@@ -3935,6 +4006,7 @@
 .tongji.baidu.com
 .toolbar.baidu.com
 .toolbar.msn.com
+.toolbar.soso.com
 .tools.3g.qq.com
 .top.h.qhimg.com
 .toruk.tanx.com
@@ -3964,6 +4036,7 @@
 .tracking.aws.judge.me
 .tracking.b-cdn.net
 .tracking.bloomberg.com
+.tracking.diet.mayoclinic.org
 .tracking.epicgames.com
 .tracking.eu.miui.com
 .tracking.europe.business.samsung.com
@@ -4014,6 +4087,7 @@
 .udc.msn.com
 .udd1i5.zhihu.com
 .udpolimenew.baidu.com
+.uedata.amazon.com
 .ufosdk.baidu.com
 .ug.snssdk.com
 .uid.ksosoft.com
@@ -4043,6 +4117,7 @@
 .unionimage.baidu.com
 .unitacs.m.taobao.com
 .unityads.unity3d.com
+.unstat.baidu.com
 .up-hl.3g.qq.com
 .up1.tj.u2.ucweb.com
 .up4.ucweb.com
@@ -4095,6 +4170,7 @@
 .virus-engine.sec.miui.com
 .visualscience.external.bbc.co.uk
 .vlive.qqvideo.tc.qq.com
+.voduscdn.azureedge.net
 .volcsiriusbd.com
 .vpic.video.qq.com
 .vs19.gzcu.u3.ucweb.com
@@ -4132,6 +4208,7 @@
 .web-ivcbrasil-tag.s3.us-west-2.amazonaws.com
 .web.sogou.com
 .webcast-ppx.snssdk.com
+.webmetrics.mayoclinic.org
 .website-security.geotrust.com
 .website-security.rapidssl.com
 .webstat.ws.126.net
@@ -4161,6 +4238,8 @@
 .wwads.cn
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
+.www.addtoany.com
+.www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
 .www7.springer.com
 .wxaintpcos.wxqcloud.qq.com.cn
@@ -4323,7 +4402,6 @@ dns.m.sm.cn
 dns.wechat.com
 download.wan.sohu.com
 du.163.com
-edgecast-vod.yimg.com
 encounter.bz.mgtv.com
 err.taobao.com
 events-analytics.apple.com
@@ -4457,7 +4535,6 @@ proxy-mob-cld.alicdn.com
 prt-stsdk.vivo.com.cn
 qgnu18wo.sina.cn
 qiye.xiaomi.com
-qring-tms.qq.com
 quickaplus-server-api-cn-zhangjiakou.aliyuncs.com
 r.dmp.sina.cn
 r.dmp.sina.com.cn
