--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,4 +1,4 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-09 21:57:59
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-10 11:17:27
 # Total rules: 4610
 
 .0a0d-d3l1vr.b-cdn.net
@@ -1187,7 +1187,6 @@
 .d1rnw04e6mc22h.cloudfront.net
 .d1ros97qkrwjf5.cloudfront.net
 .d1rp4yowwe587e.cloudfront.net
-.d1rr5z16sjcy10.cloudfront.net
 .d1rsh847opos9y.cloudfront.net
 .d1rszqblq924lq.cloudfront.net
 .d1s18kaechs9c9.cloudfront.net
@@ -1641,6 +1640,7 @@
 .d2va1d0hpla18n.cloudfront.net
 .d2vmavw0uawm2t.cloudfront.net
 .d2vorijeeka2cf.cloudfront.net
+.d2vptth0euqbxm.cloudfront.net
 .d2vvyk8pqw001z.cloudfront.net
 .d2vwl2vhlatm2f.cloudfront.net
 .d2vwsmst56j4zq.cloudfront.net
