--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,4 +1,4 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-10 11:17:27
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-11 09:48:24
 # Total rules: 4610
 
 .0a0d-d3l1vr.b-cdn.net
@@ -67,6 +67,7 @@
 .activeqq.3g.qq.com
 .actives.youku.com
 .activity.browser.intl.miui.com
+.acttg.eastmoney.com
 .ad-1258444056.cos.accelerate.myqcloud.com
 .ad-creatives-public.commondatastorage.googleapis.com
 .ad-serve.b-cdn.net
@@ -516,6 +517,7 @@
 .bdplus.baidu.com
 .bds.snssdk.com
 .bdsp.x.jd.com
+.bdstatic.eastmoney.com
 .bdtt.b-cdn.net
 .beacon-api.aliyuncs.com
 .beacon.cdn.qq.com
@@ -794,6 +796,7 @@
 .counter.ksosoft.com
 .counter.people.cn
 .counter.sina.com.cn
+.cp2.eastmoney.com
 .cpc.sogou.com
 .cpc.sohu.com
 .cpoml.iask.sina.com.cn
@@ -991,7 +994,6 @@
 .d1cdnlzf6usiff.cloudfront.net
 .d1cg2aopojxanm.cloudfront.net
 .d1ckj42q07f9s3.cloudfront.net
-.d1clfvuu2240eh.cloudfront.net
 .d1clmik8la8v65.cloudfront.net
 .d1clufhfw8sswh.cloudfront.net
 .d1cr9zxt7u0sgu.cloudfront.net
@@ -1188,7 +1190,6 @@
 .d1ros97qkrwjf5.cloudfront.net
 .d1rp4yowwe587e.cloudfront.net
 .d1rsh847opos9y.cloudfront.net
-.d1rszqblq924lq.cloudfront.net
 .d1s18kaechs9c9.cloudfront.net
 .d1s4mby8domwt9.cloudfront.net
 .d1s5n6wuwgnxf4.cloudfront.net
@@ -1265,7 +1266,6 @@
 .d1yt8zt4633tzi.cloudfront.net
 .d1ytalcrl612d7.cloudfront.net
 .d1yu5hbtu8mng9.cloudfront.net
-.d1yu67rmchodpo.cloudfront.net
 .d1yyhdmsmo3k5p.cloudfront.net
 .d1z1vj4sd251u9.cloudfront.net
 .d1z2jf7jlzjs58.cloudfront.net
@@ -1290,7 +1290,6 @@
 .d204slsrhoah2f.cloudfront.net
 .d205jrj5h1616x.cloudfront.net
 .d20903hof2l33q.cloudfront.net
-.d20duyjzb7cuoc.cloudfront.net
 .d20je219bs8hnq.cloudfront.net
 .d20kffh39acpue.cloudfront.net
 .d20kfqepj430zj.cloudfront.net
@@ -1373,7 +1372,6 @@
 .d28bcu8ltt2bxh.cloudfront.net
 .d28exbmwuav7xa.cloudfront.net
 .d28g1fhp6rn9w3.cloudfront.net
-.d28g9g3vb08y70.cloudfront.net
 .d28k9nkt2spnp.cloudfront.net
 .d28quk6sxoh2w5.cloudfront.net
 .d28s7kbgrs6h2f.cloudfront.net
@@ -1622,7 +1620,6 @@
 .d2tnx644ijgq6i.cloudfront.net
 .d2trpg4l6gqit0.cloudfront.net
 .d2tvgfsghnrkwb.cloudfront.net
-.d2u1npnnqecmpq.cloudfront.net
 .d2u2lv2h6u18yc.cloudfront.net
 .d2u4fn5ca4m3v6.cloudfront.net
 .d2uaktjl22qvg4.cloudfront.net
@@ -1667,7 +1664,6 @@
 .d2y8ttytgze7qt.cloudfront.net
 .d2yc6hxtq0phup.cloudfront.net
 .d2yeczd6cyyd0z.cloudfront.net
-.d2yh8t8mdj4l9x.cloudfront.net
 .d2yjxa7gi6wm99.cloudfront.net
 .d2ykons4g8jre6.cloudfront.net
 .d2ywv53s25fi6c.cloudfront.net
@@ -1934,7 +1930,6 @@
 .d3nel6rcmq5lzw.cloudfront.net
 .d3ngt858zasqwf.cloudfront.net
 .d3nj94pigtgs7y.cloudfront.net
-.d3nq5jrakcyw1w.cloudfront.net
 .d3numuoibysgi8.cloudfront.net
 .d3nvrqlo8rj1kw.cloudfront.net
 .d3nz96k4xfpkvu.cloudfront.net
@@ -2204,7 +2199,6 @@
 .demkc32bq01ah.cloudfront.net
 .derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
-.detwzgl8cvciv.cloudfront.net
 .dev-push.m.youku.com
 .dev.visualwebsiteoptimizer.com
 .devgottia.github.io
@@ -2265,7 +2259,6 @@
 .divekcl7q9fxi.cloudfront.net
 .diz4z73aymwyp.cloudfront.net
 .diziwatchpreroll.pages.dev
-.dj4odketdva9s.cloudfront.net
 .djgnqo9p1icyr.cloudfront.net
 .djm080u34wfc5.cloudfront.net
 .djnaivalj34ub.cloudfront.net
@@ -2563,6 +2556,8 @@
 .eloqua-tracking.unity3d.com
 .eloqua-trackings.unity3d.com
 .em.baidu.com
+.emdcadvertise.eastmoney.com
+.emdcadvise.eastmoney.com
 .emoticon.sns.iqiyi.com
 .ems.youku.com
 .enc-90128738.b-cdn.net
@@ -2599,6 +2594,7 @@
 .events.mapbox.com
 .events.mz.unity3d.com
 .events.reddit.com
+.events.redditmedia.com
 .events.release.narrativ.com
 .ex.qq.com
 .ex.tanx.com
@@ -2896,6 +2892,7 @@
 .https-filtering-check.adtidy.org
 .httpsdns.baidu.com
 .huatuo.qq.com
+.huaxiang.eastmoney.com
 .hudong.pl.youku.com
 .hui.sohu.com
 .huichuan.sm.cn
@@ -3341,6 +3338,7 @@
 .nextdaymedia-ads.s3.amazonaws.com
 .nexus.officeapps.live.com
 .nexusrules.officeapps.live.com
+.nhtradecfg.eastmoney.com
 .ninja.akamaized.net
 .nitrous-analytics.s3.amazonaws.com
 .nl-rcd.iqiyi.com
@@ -3686,6 +3684,7 @@
 .safebrowsing.urlsec.qq.com
 .sail-horizon.com
 .sam.msn.com
+.same.eastmoney.com
 .sapi.sina.cn
 .saveeeee.myshopify.com
 .saveu5-normal-lq.zijieapi.com
@@ -4294,6 +4293,7 @@
 .zmetrics.msn.com
 .znsv.baidu.com
 .zoosnet.net
+.zqhd.eastmoney.com
 .zqtk.net
 .zt.jd.com
 .ztd.dds.microsoft.com
