--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-11 09:48:24
-# Total rules: 4610
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-11 19:59:01
+# Total rules: 4628
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -100,6 +100,7 @@
 .ad.rus.xiaomi.com
 .ad.sina.com.cn
 .ad.sohu.com
+.ad.toutiao.com
 .ad.us.sinaimg.cn
 .ad.v3mh.com
 .ad.weibo.com
@@ -251,6 +252,7 @@
 .adservice.google.com
 .adsfile.qq.com
 .adsgroup.qq.com
+.adshare.toutiao.com
 .adshmct.qq.com
 .adshmmsg.qq.com
 .adshows.21cn.com
@@ -666,6 +668,7 @@
 .capture.condenastdigital.com
 .carbonads.com
 .carpe.pages.dev
+.cars.toutiao.com
 .catalog.video.msn.com
 .cb.baidu.com
 .cbjs.baidu.com
@@ -834,6 +837,7 @@
 .d.g.mi.com
 .d.reddit.com
 .d.skk.moe
+.d.toutiao.com
 .d0.sina.com.cn
 .d0.sinaimg.cn
 .d00.sina.com.cn
@@ -2201,6 +2205,7 @@
 .desgao1zt7irn.cloudfront.net
 .dev-push.m.youku.com
 .dev.visualwebsiteoptimizer.com
+.developer.toutiao.com
 .devgottia.github.io
 .device-metrics-us-2.amazon.com
 .device-metrics-us.amazon.com
@@ -2307,8 +2312,10 @@
 .dltvkwr7nbdlj.cloudfront.net
 .dlvds9i67c60j.cloudfront.net
 .dlxk2dj1h3e83.cloudfront.net
+.dm-hl.toutiao.com
 .dm.bytedance.com
 .dm.pstatp.com
+.dm.toutiao.com
 .dm0acvguygm9h.cloudfront.net
 .dm0ly9ibqkdxn.cloudfront.net
 .dm0t14ck8pg86.cloudfront.net
@@ -2407,6 +2414,7 @@
 .dr6vcclmzwk74.cloudfront.net
 .dr8pk6ovub897.cloudfront.net
 .drbccw04ifva6.cloudfront.net
+.drcn-weather.cloud.huawei.com
 .drda5yf9kgz5p.cloudfront.net
 .dre81lzpy0s7q.cloudfront.net
 .dreemdmbabys.oss-cn-guangzhou.aliyuncs.com
@@ -2429,6 +2437,7 @@
 .dsnymrk0k4p3v.cloudfront.net
 .dsp-x.jd.com
 .dsp.simba.taobao.com
+.dsp.toutiao.com
 .dspsdk.pinduoduo.com
 .dsuyzexj3sqn9.cloudfront.net
 .dt3y1f1i1disy.cloudfront.net
@@ -2900,6 +2909,7 @@
 .huodong.pl.youku.com
 .huodong.vip.youku.com
 .husky.sogou.com
+.hwa.his.huawei.com
 .hwstats.unity3d.com
 .hybrid.miniapp.taobao.com
 .hydra.alibaba.com
@@ -3068,6 +3078,7 @@
 .kuiniuca.com
 .kwurl.ucweb.com
 .l.qq.com
+.l.ykimg.com
 .l.youku.com
 .labadena.com
 .lb.gtimg.com
@@ -3285,6 +3296,7 @@
 .monitor.music.qq.com
 .monitor.qq.com
 .monorail-edge.shopifysvc.com
+.monsetting.toutiao.com
 .mostat.wps.cn
 .mountain.zhidao.baidu.com
 .moupdate10332052.wps.cn
@@ -3322,10 +3334,12 @@
 .n.3g.163.com
 .nadvideo2.baidu.com
 .nativead.s3.amazonaws.com
+.nativeapp.toutiao.com
 .nbsdk-baichuan.alicdn.com
 .nbsdk-baichuan.m.taobao.com
 .nbsdk-baichuan.taobao.com
 .ndct-data.video.iqiyi.com
+.nebula-collector.huawei.com
 .neirong.baidu.com
 .net.mydays.de
 .netapm.music.163.com
@@ -3398,6 +3412,7 @@
 .oth.eve.qq.com
 .outlookads.live.com
 .outreach.crossref.org
+.p-log.ykimg.com
 .p.alimama.com
 .p.controld.com
 .p.hentaiforce.net
@@ -3438,6 +3453,7 @@
 .par02p.wns.windows.com
 .parking.godaddy.com
 .parsely.com
+.partner.toutiao.com
 .partnerad.l.google.com
 .passport-log.youku.com
 .pay.mobile.sina.cn
@@ -3779,6 +3795,7 @@
 .slb-p2p.vcloud.ks-live.com
 .slog.sina.cn
 .slog.sina.com.cn
+.sm.toutiao.com
 .smartad.10010.com
 .smetric.ads.microsoft.com
 .smetrics.accuweather.com
@@ -3853,6 +3870,7 @@
 .stat.ws.126.net
 .stat.xiaomi.com
 .stat.y.qq.com
+.stat.ykimg.com
 .stat.youku.com
 .stat.youpin.mi.com
 .static-addtoany-com.cdn.ampproject.org
