--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-11 19:59:01
-# Total rules: 4628
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-12 09:38:35
+# Total rules: 4632
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -607,6 +607,7 @@
 .bugreportv2.qq.com
 .buluo.qq.com
 .business-api.tiktok.com
+.buysellads.com
 .bzclk.baidu.com
 .c-5uwzmx78pmca09x24aiux2euavx2ekwu.g00.msn.com
 .c-adash.m.taobao.com
@@ -3067,6 +3068,7 @@
 .jun01.oss-cn-beijing.aliyuncs.com
 .jzclick.soso.com
 .jzt.jd.com
+.k.qwant.com
 .kalstats.kaltura.com
 .kcqoej.roborock.com
 .kde.qq.com
@@ -3894,6 +3896,7 @@
 .stats.nymag.com
 .stats.paypal.com
 .stats.propublica.org
+.stats.qwant.com
 .stats.shopify.com
 .stats.unity3d.com
 .stats.wired.com
@@ -4169,6 +4172,7 @@
 .vd.emp.prd.s3.amazonaws.com
 .vebo-vast.pages.dev
 .vegslb.com
+.vf.startpage.com
 .vhotwsh.video.qq.com
 .vibeaconstr.onezapp.com
 .video-ad.sm.cn
