--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-12 09:38:35
-# Total rules: 4632
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-13 09:55:30
+# Total rules: 4641
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -51,6 +51,7 @@
 .a1.itc.cn
 .a8bea9eb5d.com
 .a8clk.macpaw.com
+.aa.zdnet.com
 .aan.amazon.com
 .ablink.staging-e.klarna.com
 .abroad-ad.kingsoft-office-service.com
@@ -660,6 +661,7 @@
 .c.za.msn.com
 .c0nt4ct-me.pages.dev
 .c1-stats.shopifysvc.com
+.c783.fastcompany.com
 .cache.datamart.windows.com
 .caclick.baidu.com
 .cad.youku.com
@@ -2572,6 +2574,7 @@
 .ems.youku.com
 .enc-90128738.b-cdn.net
 .enchantestore.myshopify.com
+.ensighten.bhphoto.com
 .entrecard.s3.amazonaws.com
 .entry.baidu.com
 .epro.sogou.com
@@ -3000,6 +3003,7 @@
 .imtt.qq.com
 .in.applicationinsights.azure.com
 .in.yimg.com
+.indexww.com
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
 .infinityid.condenastdigital.com
@@ -3698,6 +3702,7 @@
 .sa.api.intl.miui.com
 .sa.bbc.co.uk
 .sa.sina.cn
+.saa.zdnet.com
 .saas.hpplay.cn
 .safebrowsing.urlsec.qq.com
 .sail-horizon.com
@@ -3756,6 +3761,7 @@
 .securemvt.apple.com
 .security-lq.snssdk.com
 .seedapp-creative.s3.amazonaws.com
+.segment.com
 .segment.io
 .send.preply.com
 .sentry.d.xiaomi.net
@@ -3782,6 +3788,7 @@
 .show.look.360.cn
 .showwxml.qq.com
 .shukriya90.com
+.shuzilm.cn
 .shy-boat-90ce.jiko728928922.workers.dev
 .sia.internet.apps.samsung.com
 .sigma.baidu.com
@@ -3891,6 +3898,8 @@
 .statistic.qzone.qq.com
 .stats.addtoany.com
 .stats.bbc.co.uk
+.stats.blogger.com
+.stats.fastcompany.com
 .stats.kaltura.com
 .stats.miui.com
 .stats.nymag.com
