--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-15 09:48:34
-# Total rules: 4908
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-16 10:09:23
+# Total rules: 4921
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -36,6 +36,7 @@
 .3dns.adobe.com
 .3rd.t.sohu.com
 .3site-rss.s3-ap-northeast-1.amazonaws.com
+.51.la
 .682a5845.b-cdn.net
 .7ng6v3lu3c.execute-api.us-east-1.amazonaws.com
 .7q1z79gxsi.global.ssl.fastly.net
@@ -80,6 +81,7 @@
 .acttg.eastmoney.com
 .ad-1258444056.cos.accelerate.myqcloud.com
 .ad-creatives-public.commondatastorage.googleapis.com
+.ad-log-upload.mihoyo.com
 .ad-serve.b-cdn.net
 .ad.12306.cn
 .ad.163.com
@@ -194,7 +196,6 @@
 .adobe-dns-2.adobe.com
 .adobe-dns-3.adobe.com
 .adobe-dns.adobe.com
-.adobe.io
 .adp.cnki.net
 .adping.qq.com
 .adpm.app.qq.com
@@ -394,6 +395,7 @@
 .analytics.163.com
 .analytics.21cn.com
 .analytics.adjust.net.in
+.analytics.adobe.io
 .analytics.archive.org
 .analytics.bigdata.samsung.com
 .analytics.bloomberg.com
@@ -410,6 +412,7 @@
 .analytics.msn.com
 .analytics.msnbc.msn.com
 .analytics.pointdrive.linkedin.com
+.analytics.python.org
 .analytics.s3.amazonaws.com
 .analytics.snssdk.com
 .analytics.spotify.com
@@ -579,7 +582,6 @@
 .bgg.baidu.com
 .bigdata.ssp.samsung.com
 .biggestplayer.cachefly.net
-.bilivideo.cn
 .bingads.microsoft.com
 .bitcasino365.b-cdn.net
 .bithumb.com
@@ -717,6 +719,7 @@
 .cb.baidu.com
 .cbjs.baidu.com
 .cbjslog.baidu.com
+.cc-api-data.adobe.io
 .cc.map.qq.com
 .cc.sys.intl.xiaomi.com
 .ccc-x.jd.com
@@ -2668,6 +2671,7 @@
 .edgecast-vod.yimg.com
 .edigitalsurvey.com
 .eduad.baidu.com
+.eel.transistor.fm
 .ef-dongfeng.tanx.com
 .ef.opendsp.tanx.com
 .ef.tanx.com
@@ -3014,6 +3018,7 @@
 .hk2sch130022135.wns.windows.com
 .hk2wns1.wns.windows.com
 .hk2wns1b.wns.windows.com
+.hkrpg-log-upload.mihoyo.com
 .hl2rcv.adobe.com
 .hlrcv.stage.adobe.com
 .hm.baidu.com
@@ -3056,6 +3061,7 @@
 .hydra.alibaba.com
 .hydro-ma-proxy.akamaized.net
 .hyndtren25.pages.dev
+.hz-telemetry.adobe.io
 .hz.mmstat.com
 .hz.youku.com
 .i.paypal.com
@@ -3267,6 +3273,9 @@
 .log-auth.flysleep.cn
 .log-hl.snssdk.com
 .log-lq.snssdk.com
+.log-upload-eur.mihoyo.com
+.log-upload-os.mihoyo.com
+.log-upload.mihoyo.com
 .log-vietnamplus-vn.cdn.ampproject.org
 .log.aliyuncs.com
 .log.amemv.com
@@ -3325,7 +3334,6 @@
 .logx-experimentation.iherb.com
 .logx.optimizely.com
 .look-like-star.myshopify.com
-.look.163.com
 .lp.americas.business.samsung.com
 .lp.apac.business.samsung.com
 .lp.b2bmail.adobe.com
@@ -3388,6 +3396,7 @@
 .mazu.m.qq.com
 .mazu.sec.miui.com
 .mbdlog.iqiyi.com
+.mcdn.bilivideo.cn
 .mcdn.bilivideo.com
 .mcgi.v.qq.com
 .mclick.simba.taobao.com
@@ -3850,6 +3859,7 @@
 .refer.wordpress.com
 .referrer.disqus.com
 .reke.at.sohu.com
+.reksaidnslog.security.mihoyo.com
 .rel.msn.com
 .release.baidu.com
 .removeads.workers.dev
@@ -4076,6 +4086,7 @@
 .spynetalt.microsoft.com
 .srd.simba.taobao.com
 .srtb.msn.com
+.srv.tunefindforfans.com
 .ss-mndsrv.b-cdn.net
 .ssc.voacantonese.com
 .ssl-cdn.static.browser.mi-img.com
@@ -4141,6 +4152,7 @@
 .stats.wired.com
 .stats.wordpress.com
 .stats.wp.com
+.stats.zotabox.com
 .stats2.arstechnica.com
 .stats2.newyorker.com
 .statscollector-1.agora.io
@@ -4213,6 +4225,7 @@
 .techain.baidu.com
 .techhome-js.github.io
 .telemetry-coverage.mozilla.org
+.telemetry.adobe.io
 .telemetry.appex.bing.com
 .telemetry.dropbox.com
 .telemetry.microsoft.com
