--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-16 10:09:23
-# Total rules: 4921
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-16 11:34:29
+# Total rules: 4925
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -184,6 +184,10 @@
 .adkwai.com
 .adm.baidu.com
 .adm.leju.sina.com.cn
+.adm0.autoimg.cn
+.adm1.autoimg.cn
+.adm2.autoimg.cn
+.adm3.autoimg.cn
 .admarket.21cn.com
 .admarvel.s3.amazonaws.com
 .admob-gmats.uc.r.appspot.com
