--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-16 11:34:29
-# Total rules: 4925
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-17 11:07:02
+# Total rules: 4935
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -12,6 +12,7 @@
 .12551-1311572332.cos.ap-shanghai.myqcloud.com
 .1437953666.rsc.cdn77.org
 .1480876790.rsc.cdn77.org
+.1489322637.rsc.cdn77.org
 .1529462937.rsc.cdn77.org
 .1548164934.rsc.cdn77.org
 .1558334541.rsc.cdn77.org
@@ -41,6 +42,7 @@
 .7ng6v3lu3c.execute-api.us-east-1.amazonaws.com
 .7q1z79gxsi.global.ssl.fastly.net
 .888.tv.sohu.com
+.92x.tumblr.com
 .9w2zed1szg.execute-api.us-east-1.amazonaws.com
 .Coordinator-Production-28516768.us-east-1.elb.amazonaws.com
 .a-adx.ctrip.com
@@ -827,7 +829,6 @@
 .conf.wifi.360.cn
 .confiant-integrations.global.ssl.fastly.net
 .confiant.msn.com
-.config-api.internet.apps.samsung.com
 .config.ab.qq.com
 .config.push.sogou.com
 .config.uca.cloud.unity3d.com
@@ -2204,8 +2205,10 @@
 .data.americanexpress.test.ajo.adobe.com
 .data.b2bmail.adobe.com
 .data.batch-caixa.test.ajo.adobe.com
+.data.batch-doc.test.ajo.adobe.com
 .data.batch-na.test.ajo.adobe.com
 .data.batch-pm.test.ajo.adobe.com
+.data.batch-prog1.test.ajo.adobe.com
 .data.batch-ulta.test.ajo.adobe.com
 .data.bilibili.com
 .data.cip.test.ajo.adobe.com
@@ -2254,6 +2257,7 @@
 .data.tesco.test.ajo.adobe.com
 .data.test3.test.ajo.adobe.com
 .data.thenoshproject.test.ajo.adobe.com
+.data.three.test.ajo.adobe.com
 .data.tsbuat.test.ajo.adobe.com
 .data.ultimate-success-emea.test.ajo.adobe.com
 .data.wunderman-email.cjm.adobe.com
@@ -2745,6 +2749,7 @@
 .familygiftlove.myshopify.com
 .fanxing.kugou.com
 .fav.simba.taobao.com
+.fazpowerdenet.tumblr.com
 .fc-feed.cdn.bcebos.com
 .fclick.baidu.com
 .fclog.baidu.com
@@ -3190,6 +3195,7 @@
 .ir.mail.163.com
 .irpmt.mail.163.com
 .isdspeed.qq.com
+.its-dori.tumblr.com
 .itsdata.map.baidu.com
 .ivy.pconline.com.cn
 .iwallet-1258175138.file.myqcloud.com
@@ -3348,6 +3354,7 @@
 .lp.email-lightroom.cjm.adobe.com
 .lp.email-merkle.cjm.adobe.com
 .lp.europe.business.samsung.com
+.lp.gxv.test.ajo.adobe.com
 .lp.jkowalskisb.journeyusshared.adobe.com
 .lp.jkowalskisbdev.journeyusshared.adobe.com
 .lp.kkaufmansb.journeyusshared.adobe.com
@@ -3733,6 +3740,7 @@
 .pixiu.shangshufang.ksosoft.com
 .pjogndc8ixoidna.360doc.cn
 .pl.cp31.ott.cibntv.net
+.platform.tumblr.com
 .player-telemetry.vimeo.com
 .plbusiness.samsung.com
 .pls.prd.mz.internal.unity3d.com
@@ -3911,6 +3919,7 @@
 .rs2.qq.com
 .rtbasia.com
 .rtc-logger-va.tiktokv.com
+.rtc-logger.bytevcloud.com
 .rtlog.tiktokv.com
 .rtmonitor.kugou.com
 .rtwebcollects.kugou.com
@@ -4091,6 +4100,7 @@
 .srd.simba.taobao.com
 .srtb.msn.com
 .srv.tunefindforfans.com
+.srvcs.tumblr.com
 .ss-mndsrv.b-cdn.net
 .ssc.voacantonese.com
 .ssl-cdn.static.browser.mi-img.com
