--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-17 11:07:02
-# Total rules: 4935
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-18 10:57:13
+# Total rules: 4942
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -474,6 +474,9 @@
 .api.waptest.taobao.com
 .api.youqian.baidu.com
 .apisgame.iqiyi.com
+.apm-fe.xiaohongshu.com
+.apm-native.xiaohongshu.com
+.apm-track.xiaohongshu.com
 .apmplus.ap-southeast-1.volces.com
 .apmplus.volces.com
 .apoll.m.taobao.com
@@ -1361,6 +1364,7 @@
 .d20kfqepj430zj.cloudfront.net
 .d20nuqz94uw3np.cloudfront.net
 .d20tam5f2v19bf.cloudfront.net
+.d20vwa69zln1wj.cloudfront.net
 .d213cc9tw38vai.cloudfront.net
 .d219kvfj8xp5vh.cloudfront.net
 .d21f25e9uvddd7.cloudfront.net
@@ -2678,6 +2682,8 @@
 .edge.adobedc.net
 .edgecast-vod.yimg.com
 .edigitalsurvey.com
+.edith-seb.xiaohongshu.com
+.edith.xiaohongshu.com
 .eduad.baidu.com
 .eel.transistor.fm
 .ef-dongfeng.tanx.com
@@ -4660,6 +4666,7 @@ advert.lx.netease.com
 adx.alimama.com
 adxlog.vivo.com.cn
 afdconf.baidu.com
+affportal.bhphoto.com
 aicleaner.shouji.360.cn
 amap-aos-info-nogw.amap.com
 amdc-sibling.alipay.com.cn
