--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-18 13:51:25
-# Total rules: 4941
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-19 10:10:41
+# Total rules: 4942
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -22,7 +22,6 @@
 .1736253261.rsc.cdn77.org
 .1776396397.rsc.cdn77.org
 .1860793711.rsc.cdn77.org
-.1873083787.rsc.cdn77.org
 .1991482557.rsc.cdn77.org
 .1wincdn.b-cdn.net
 .2016.sina.cn
@@ -2785,6 +2784,7 @@
 .fkrkkmxsqeb5bj9r.s3.amazonaws.com
 .flash.sec.intl.miui.com
 .flash.sec.miui.com
+.flash.xiaohongshu.com
 .flashplayerfeedback.adobe.com
 .flashstats.libsyn.com
 .flex.msn.com
@@ -3279,6 +3279,7 @@
 .livestats.kaltura.com
 .lm.licenses.adobe.com
 .lm.tv.sohu.com
+.lm1.tuliu.com
 .lmbsy.qq.com
 .lmlicenses.wip4.adobe.com
 .lmsjy.qq.com
