--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-19 10:10:41
-# Total rules: 4942
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-20 10:29:49
+# Total rules: 4946
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -113,6 +113,7 @@
 .ad.rus.xiaomi.com
 .ad.sina.com.cn
 .ad.sohu.com
+.ad.thepaper.cn
 .ad.toutiao.com
 .ad.us.sinaimg.cn
 .ad.v3mh.com
@@ -202,6 +203,7 @@
 .adobe-dns-3.adobe.com
 .adobe-dns.adobe.com
 .adp.cnki.net
+.adpai.thepaper.cn
 .adping.qq.com
 .adpm.app.qq.com
 .adpublisher.s3.amazonaws.com
@@ -816,6 +818,7 @@
 .collection-endpoint-prod.herokuapp.com
 .collection-endpoint-staging.herokuapp.com
 .collector-cdn.github.com
+.collector.azure.cn
 .collector.bsg.brave.com
 .collector.dcdn.baidu.com
 .collector.github.com
@@ -2938,6 +2941,7 @@
 .h1.msn.com
 .h2.msn.com
 .h5.mse.360.cn
+.h5.youzan.com
 .haitaoad.nosdn.127.net
 .haiwai-ic.ksosoft.com
 .hao.360.cn
