--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-20 10:29:49
-# Total rules: 4946
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-21 10:05:32
+# Total rules: 4940
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -384,6 +384,7 @@
 .amazon-adsystem.amazon.com
 .amazon-adsystem.com
 .ambientdsp.cachefly.net
+.amdc-thirdparty.alipay.com
 .amdc.alipay.com
 .amdcopen.m.taobao.com
 .amfi.gou.sogou.com
@@ -396,6 +397,7 @@
 .analytics-alv.google.com
 .analytics-consent-manager-v2-prod.azureedge.net
 .analytics-consent-manager.azureedge.net
+.analytics-events.apple.com
 .analytics-prod-alb-292764149.us-west-2.elb.amazonaws.com
 .analytics-sg.tiktok.com
 .analytics.126.net
@@ -468,7 +470,6 @@
 .api.newsfeed.intl.miui.com
 .api.optnmnstr.com
 .api.setting.intl.miui.com
-.api.shuaji.360.cn
 .api.sprig.com
 .api.stacksocial.com
 .api.uca.cloud.unity3d.com
@@ -742,7 +743,6 @@
 .cdn.ark.qq.com
 .cdn.onesignal.com
 .cdn.tanx.com
-.cdn.ynuf.aliapp.org
 .cdnweb3.pages.dev
 .cdp.cloud.unity3d.com
 .cert-test.sandbox.google.com
@@ -4037,6 +4037,7 @@
 .show-msgch.qq.com
 .show.look.360.cn
 .showwxml.qq.com
+.shuaji.360.cn
 .shukriya90.com
 .shuzilm.cn
 .shy-boat-90ce.jiko728928922.workers.dev
@@ -4605,6 +4606,7 @@
 .ykatr.youku.com
 .ykrec.youku.com
 .ykrectab.youku.com
+.ynuf.aliapp.org
 .yoo.gtimg.com
 .youku-acs.m.taobao.com
 .ys2000.cdn.bcebos.com
@@ -4635,7 +4637,6 @@ abyss.cyapi.cn
 ac.dun.163yun.com
 acfeedbackws.icloud.com
 acstatic-dun.126.net
-act.commercial.shouji.360.cn
 ad-analysis.pconline.com.cn
 ad-h5-cdn.soulapp.cn
 ad-h5-station-cdn.soulapp.cn
@@ -4645,10 +4646,8 @@ ad-stat.ksosoft.com
 ad.21cn.com
 ad.alimama.com
 ad.bn.netease.com
-ad.gamebox.360.cn
 ad.iot.360.cn
 ad.maoyan.com
-adapi.shouji.360.cn
 adashx.ut.ele.me
 adavideo.baidu.com
 adlog.vivo.com.cn
@@ -4671,7 +4670,6 @@ adx.alimama.com
 adxlog.vivo.com.cn
 afdconf.baidu.com
 affportal.bhphoto.com
-aicleaner.shouji.360.cn
 amap-aos-info-nogw.amap.com
 amdc-sibling.alipay.com.cn
 amdc.m.youku.com
@@ -4717,7 +4715,6 @@ cloan.amap.com
 cm.dmp.sina.cn
 cm.l.qq.com
 cnc.fe01.lg.xiaomi.com
-commercial.shouji.360.cn
 config-p2p-other.vcloud.ks-live.com
 contactapi.micloud.xiaomi.net
 controller.intl.xiaomi.com
@@ -4775,7 +4772,6 @@ httpdns.browser.miui.com
 httpdns.volces.com
 huawei.facebook.com
 huichuan-mc.sm.cn
-huodong.ios.shouji.360.cn
 huodong.xiaomi.com
 huosai.xiaomi.com
 i.xiaomi.com
@@ -4827,7 +4823,6 @@ mob.bz.mgtv.com
 monitor-stsdk.vivo.com.cn
 mp.huangye.miui.com
 mpush-api.aliyun.com
-msg.shouji.360.cn
 msmetrics-test.ws.sonos.com
 mssp.baidu.com
 mtrace.amap.com
@@ -4945,5 +4940,4 @@ xitong.xiaomi.com
 xshare.api.xiaomi.com
 yaolu.mh.163.com
 yaolu.yuedu.163.com
-ynuf.aliapp.org
 yt-adv.bn.netease.com
