--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,11 +1,12 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-21 23:32:17
-# Total rules: 4939
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-22 09:50:16
+# Total rules: 4946
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
 .1080872514.rsc.cdn77.org
 .1097834592.rsc.cdn77.org
 .1187531871.rsc.cdn77.org
+.119.29.196.104.bc.googleusercontent.com
 .1208344341.rsc.cdn77.org
 .123.sogou.com
 .123.sogoucdn.com
@@ -20,6 +21,7 @@
 .1675450967.rsc.cdn77.org
 .1721553824.rsc.cdn77.org
 .1736253261.rsc.cdn77.org
+.175.220.196.104.bc.googleusercontent.com
 .1776396397.rsc.cdn77.org
 .1860793711.rsc.cdn77.org
 .1991482557.rsc.cdn77.org
@@ -507,7 +509,6 @@
 .applog.zijieapi.com
 .applogios.uc.cn
 .appsad.cn
-.appsflyersdk.com
 .appsupport.qq.com
 .appversion.115.com
 .apsrgeo.amap.com
@@ -843,6 +844,7 @@
 .contentrecommend-out.mobile.sina.cn
 .contoso-my.sharepoint.com
 .contributions.guardianapis.com
+.conversions.appsflyersdk.com
 .cookie-guard-erdee.ey.r.appspot.com
 .cookielawblog.wordpress.com
 .coordinator.cm.bloomberg.com
@@ -2431,6 +2433,7 @@
 .dlp4luwpus5kr.cloudfront.net
 .dlrioxg1637dk.cloudfront.net
 .dls-account.di.atlas.samsung.com
+.dlsdk.appsflyersdk.com
 .dlsw.baidu.com
 .dlsw.br.baidu.com
 .dlswbr.baidu.com
@@ -2642,6 +2645,7 @@
 .dyj8pbcnat4xv.cloudfront.net
 .dykwdhfiuha6l.cloudfront.net
 .dymwsh1c2kslr.cloudfront.net
+.dynamic-report-api.appsflyersdk.com
 .dyodrs1kxvg6o.cloudfront.net
 .dyrfxuvraq0fk.cloudfront.net
 .dysuze6ljcmcr.cloudfront.net
@@ -2855,6 +2859,7 @@
 .gb.corp.163.com
 .gc.sec.miui.com
 .gcapi.sy.kugou.com
+.gcdsdk.appsflyersdk.com
 .gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
 .gecko.snssdk.com
@@ -3166,6 +3171,7 @@
 .imtt.qq.com
 .in.applicationinsights.azure.com
 .in.yimg.com
+.inapps.appsflyersdk.com
 .indexww.com
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
@@ -3263,6 +3269,7 @@
 .labadena.com
 .landing.ultimate-success-emea.test.ajo.adobe.com
 .landingpage.emaillpb.adobe.com
+.launches.appsflyersdk.com
 .lb.gtimg.com
 .lc-push.zhihu.com
 .leak.360.cn
@@ -3775,6 +3782,7 @@
 .prexyone.appspot.com
 .privacy-center.org
 .privacy-policy.truste.com
+.privacy-sandbox.appsflyersdk.com
 .projecta-common-1258344701.file.myqcloud.com
 .projectagora.s3.amazonaws.com
 .promote.biz.weibo.cn
@@ -3879,6 +3887,7 @@
 .redrain-aglnsy.bytedance.com
 .refer.wordpress.com
 .referrer.disqus.com
+.register.appsflyersdk.com
 .reke.at.sohu.com
 .reksaidnslog.security.mihoyo.com
 .rel.msn.com
@@ -4461,7 +4470,6 @@
 .vcs.zijieapi.com
 .vd.contents.prod.eu.s3.amazonaws.com
 .vd.emp.prd.s3.amazonaws.com
-.vebo-vast.pages.dev
 .vegslb.com
 .vf.startpage.com
 .vhotwsh.video.qq.com
@@ -4623,7 +4631,6 @@
 .zhstatic.zhihu.com
 .zmetrics.msn.com
 .znsv.baidu.com
-.zoosnet.net
 .zqhd.eastmoney.com
 .zqtk.net
 .zt.jd.com
