--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-22 09:50:16
-# Total rules: 4946
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-22 21:24:26
+# Total rules: 4945
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -275,6 +275,7 @@
 .adse.wsa.ximalaya.com
 .adse.ximalaya.com
 .adsebs.ximalaya.com
+.adsehera.ximalaya.com
 .adsence.sogou.com
 .adsense.html5.qq.com
 .adsensecustomsearchads.com
@@ -337,6 +338,7 @@
 .advice-ads.s3.amazonaws.com
 .advst.cp33.ott.cibntv.net
 .adwbs.ximalaya.com
+.adweb.ximalaya.com
 .adx-open-service.youku.com
 .adx-static.ksosoft.com
 .adx.maplehaze.cn
@@ -509,6 +511,7 @@
 .applog.zijieapi.com
 .applogios.uc.cn
 .appsad.cn
+.appsflyersdk.com
 .appsupport.qq.com
 .appversion.115.com
 .apsrgeo.amap.com
@@ -844,7 +847,6 @@
 .contentrecommend-out.mobile.sina.cn
 .contoso-my.sharepoint.com
 .contributions.guardianapis.com
-.conversions.appsflyersdk.com
 .cookie-guard-erdee.ey.r.appspot.com
 .cookielawblog.wordpress.com
 .coordinator.cm.bloomberg.com
@@ -2433,7 +2435,6 @@
 .dlp4luwpus5kr.cloudfront.net
 .dlrioxg1637dk.cloudfront.net
 .dls-account.di.atlas.samsung.com
-.dlsdk.appsflyersdk.com
 .dlsw.baidu.com
 .dlsw.br.baidu.com
 .dlswbr.baidu.com
@@ -2645,7 +2646,6 @@
 .dyj8pbcnat4xv.cloudfront.net
 .dykwdhfiuha6l.cloudfront.net
 .dymwsh1c2kslr.cloudfront.net
-.dynamic-report-api.appsflyersdk.com
 .dyodrs1kxvg6o.cloudfront.net
 .dyrfxuvraq0fk.cloudfront.net
 .dysuze6ljcmcr.cloudfront.net
@@ -2748,6 +2748,7 @@
 .ex.qq.com
 .ex.tanx.com
 .exceptionlog.kugou.com
+.exosrv.com
 .extlog.snssdk.com
 .f.convertkit.com
 .f10.baidu.com
@@ -2859,7 +2860,6 @@
 .gb.corp.163.com
 .gc.sec.miui.com
 .gcapi.sy.kugou.com
-.gcdsdk.appsflyersdk.com
 .gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
 .gecko.snssdk.com
@@ -3171,7 +3171,6 @@
 .imtt.qq.com
 .in.applicationinsights.azure.com
 .in.yimg.com
-.inapps.appsflyersdk.com
 .indexww.com
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
@@ -3269,7 +3268,6 @@
 .labadena.com
 .landing.ultimate-success-emea.test.ajo.adobe.com
 .landingpage.emaillpb.adobe.com
-.launches.appsflyersdk.com
 .lb.gtimg.com
 .lc-push.zhihu.com
 .leak.360.cn
@@ -3633,6 +3631,7 @@
 .open.snssdk.com
 .openapi.guanjia.qq.com
 .openapi.samsung.com
+.openinstall.io
 .openjmacs4uc.m.taobao.com
 .openmonitor.alipay-eco.com
 .openmonitor.alipay.com
@@ -3782,7 +3781,6 @@
 .prexyone.appspot.com
 .privacy-center.org
 .privacy-policy.truste.com
-.privacy-sandbox.appsflyersdk.com
 .projecta-common-1258344701.file.myqcloud.com
 .projectagora.s3.amazonaws.com
 .promote.biz.weibo.cn
@@ -3887,7 +3885,6 @@
 .redrain-aglnsy.bytedance.com
 .refer.wordpress.com
 .referrer.disqus.com
-.register.appsflyersdk.com
 .reke.at.sohu.com
 .reksaidnslog.security.mihoyo.com
 .rel.msn.com
@@ -4470,6 +4467,7 @@
 .vcs.zijieapi.com
 .vd.contents.prod.eu.s3.amazonaws.com
 .vd.emp.prd.s3.amazonaws.com
+.vebo-vast.pages.dev
 .vegslb.com
 .vf.startpage.com
 .vhotwsh.video.qq.com
@@ -4608,6 +4606,7 @@
 .yc-ads.s3.amazonaws.com
 .ye.dun.163yun.com
 .yieldmo-builds.s3.amazonaws.com
+.yingxiao.ximalaya.com
 .ykad-data.youku.com
 .ykad-gateway.youku.com
 .ykatr.youku.com
@@ -4631,6 +4630,7 @@
 .zhstatic.zhihu.com
 .zmetrics.msn.com
 .znsv.baidu.com
+.zoosnet.net
 .zqhd.eastmoney.com
 .zqtk.net
 .zt.jd.com
@@ -4658,7 +4658,6 @@ adashx.ut.ele.me
 adavideo.baidu.com
 adlog.vivo.com.cn
 ads.privacy.qq.com
-adsehera.ximalaya.com
 adsh.m.taobao.com
 adsh.wagbridge.1688.alimama.com
 adsh.wagbridge.alibaba.alimama.com
