--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-22 21:24:26
-# Total rules: 4945
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-23 09:11:59
+# Total rules: 4946
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -2699,6 +2699,7 @@
 .eloqua-tracking.unity3d.com
 .eloqua-trackings.unity3d.com
 .em.baidu.com
+.embeds.beehiiv.com
 .emdcadvertise.eastmoney.com
 .emdcadvise.eastmoney.com
 .emoticon.sns.iqiyi.com
