--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-23 09:11:59
-# Total rules: 4946
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-24 09:59:09
+# Total rules: 4960
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -20,10 +20,12 @@
 .1580240639.rsc.cdn77.org
 .1675450967.rsc.cdn77.org
 .1721553824.rsc.cdn77.org
+.1721697009.rsc.cdn77.org
 .1736253261.rsc.cdn77.org
 .175.220.196.104.bc.googleusercontent.com
 .1776396397.rsc.cdn77.org
 .1860793711.rsc.cdn77.org
+.1947923646.rsc.cdn77.org
 .1991482557.rsc.cdn77.org
 .1wincdn.b-cdn.net
 .2016.sina.cn
@@ -424,6 +426,7 @@
 .analytics.meituan.net
 .analytics.msn.com
 .analytics.msnbc.msn.com
+.analytics.paddle.com
 .analytics.pointdrive.linkedin.com
 .analytics.python.org
 .analytics.s3.amazonaws.com
@@ -511,6 +514,7 @@
 .applog.zijieapi.com
 .applogios.uc.cn
 .appsad.cn
+.appsec-mobile.meituan.com
 .appsflyersdk.com
 .appsupport.qq.com
 .appversion.115.com
@@ -2205,7 +2209,6 @@
 .data-optout-service.uca.cloud.unity3d.com
 .data-saver-cindi.herokuapp.com
 .data-sdk-uuid-log.d.meituan.net
-.data-sdk-uuid-report.dreport.meituan.net
 .data.1337.test.ajo.adobe.com
 .data.acsappsvcs1.test.ajo.adobe.com
 .data.adobedemoamericas305.test.ajo.adobe.com
@@ -2217,9 +2220,11 @@
 .data.batch-caixa.test.ajo.adobe.com
 .data.batch-doc.test.ajo.adobe.com
 .data.batch-na.test.ajo.adobe.com
+.data.batch-nab.test.ajo.adobe.com
 .data.batch-pm.test.ajo.adobe.com
 .data.batch-prog1.test.ajo.adobe.com
 .data.batch-ulta.test.ajo.adobe.com
+.data.batch-wunderman.test.ajo.adobe.com
 .data.bilibili.com
 .data.cip.test.ajo.adobe.com
 .data.codeandtheoryamerptrsd.campaign-sandbox.adobe.com
@@ -2269,6 +2274,7 @@
 .data.thenoshproject.test.ajo.adobe.com
 .data.three.test.ajo.adobe.com
 .data.tsbuat.test.ajo.adobe.com
+.data.ubs.test.ajo.adobe.com
 .data.ultimate-success-emea.test.ajo.adobe.com
 .data.wunderman-email.cjm.adobe.com
 .datadog.pool.ntp.org
@@ -2551,6 +2557,7 @@
 .drda5yf9kgz5p.cloudfront.net
 .dre81lzpy0s7q.cloudfront.net
 .dreemdmbabys.oss-cn-guangzhou.aliyuncs.com
+.dreport.meituan.net
 .dressimage.img-cn-beijing.aliyuncs.com
 .drf8e429z5jzt.cloudfront.net
 .drmcmm.baidu.com
@@ -2750,6 +2757,7 @@
 .ex.tanx.com
 .exceptionlog.kugou.com
 .exosrv.com
+.expenses-fe.meituan.com
 .extlog.snssdk.com
 .f.convertkit.com
 .f10.baidu.com
@@ -3058,6 +3066,7 @@
 .httpdns-sc.aliyuncs.com
 .httpdns-sdk.n.netease.com
 .httpdns.alicdn.com
+.httpdns.aliyuncs.com
 .httpdns.baidu.com
 .httpdns.bilivideo.com
 .httpdns.c.163.com
@@ -3337,6 +3346,7 @@
 .log3-misc-lq.amemv.com
 .log5-misc-lf.amemv.com
 .log5-misc-lq.amemv.com
+.logan.sankuai.com
 .logapi-and.zhipin.com
 .logapi-ios.zhipin.com
 .logapi.zhipin.com
@@ -3376,6 +3386,7 @@
 .lp.owarnersb.journeyusshared.adobe.com
 .lp.owarnersbdev.journeyusshared.adobe.com
 .lp.smartbusiness.samsung.com
+.lp.thenoshproject.test.ajo.adobe.com
 .lptag.liveperson.net
 .lptest.email-mobiledx.cjm.adobe.com
 .lstat.youku.com
@@ -3406,6 +3417,7 @@
 .mailmunch.s3.amazonaws.com
 .mapi.m.jd.com
 .mapp.qzone.qq.com
+.market-fin.meituan.com
 .market.21cn.com
 .marketing.agora.io
 .marketing.alibaba.com
@@ -4561,6 +4573,7 @@
 .worldwide.sogou.com
 .wpsweb-dc.wps.cn
 .wren.condenastdigital.com
+.wreport.meituan.net
 .ws.sj.qq.com
 .wspeed.qq.com
 .wtr-digital-analytics.ew.r.appspot.com
@@ -4715,6 +4728,7 @@ cb.l.qq.com
 cdn-haokanapk.baidu.com
 cdn.exp.xiaomi.com
 cdn.fds-ssl.api.xiaomi.com
+check.engine.miui.com
 click-bes.baidu.com
 clientlogusf.music.163.com
 cloan.amap.com
